crates/plotnik-lib/tests/snapshots/conformance__interior_strict_anchor_rejects_non_adjacent_pair.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration) @a .! (expression_statement) @b})

==== source ====
let x; /* c */ foo;

==== types ====
export interface Q {
  a: Node;
  b: Node;
}

==== result ====
<no match>
