crates/plotnik-lib/tests/snapshots/conformance__negated_regex_predicate_matches_non_match.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (identifier !~ /^foo/) @id))

==== source ====
barfoo;

==== types ====
export interface Q {
  id: Node;
}

==== result ====
{"id":{"kind":"identifier","text":"barfoo","span":[0, 6]}}
