crates/plotnik-lib/tests/snapshots/conformance__nested_trailing_soft_anchor_matches_three_levels_last.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array (array (array (number) @n .) .) .)))

==== source ====
[[[1]]]

==== types ====
export interface Q {
  n: Node;
}

==== result ====
{"n":{"kind":"number","text":"1","span":[3, 4]}}
