crates/plotnik-lib/tests/snapshots/conformance__nested_trailing_soft_anchor_matches_when_truly_last.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array (object (pair) @p .) .)))

==== source ====
[{a:1}]

==== types ====
export interface Q {
  p: Node;
}

==== result ====
{"p":{"kind":"pair","text":"a:1","span":[2, 5]}}
