crates/plotnik-lib/tests/snapshots/conformance__nested_trailing_soft_anchor_rejects_at_outermost_of_three.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array (array (array (number) @n .) .) .)))

==== source ====
[[[1]], x]

==== types ====
export interface Q {
  n: Node;
}

==== result ====
<no match>
