crates/plotnik-lib/tests/snapshots/conformance__nested_trailing_soft_anchor_rejects_when_outer_not_last.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement (array (object (pair) @p .) .)))

==== source ====
[{a:1}, b]

==== types ====
export interface Q {
  p: Node;
}

==== result ====
<no match>
