crates/plotnik-lib/tests/snapshots/conformance__nested_trailing_strict_anchor_rejects_when_outer_not_last.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (function_declaration body: (statement_block (return_statement (identifier) @id .!) .!)))

==== source ====
function f(){ return x }

==== types ====
export interface Q {
  id: Node;
}

==== result ====
<no match>
