crates/plotnik-lib/tests/snapshots/conformance__non_greedy_plus_matches_leftmost_minimal.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program {(lexical_declaration)+? @d})

==== source ====
let a; let b;

==== types ====
export interface Q {
  d: [Node, ...Node[]];
}

==== result ====
{"d":[{"kind":"lexical_declaration","text":"let a;","span":[0, 6]}]}
