crates/plotnik-lib/tests/snapshots/conformance__nongreedy_uncaptured_structured_quantifier_drops_array.snap
---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
A = [X: (expression_statement)]
Q = (program (A)*? . (debugger_statement))

==== source ====
a; b; debugger;

==== types ====
export interface AX {
  $tag: "X";
}

export type A = AX;

export type Q = A[];

==== result ====
[{"$tag":"X"},{"$tag":"X"}]
